--- a/templates/count.html
+++ b/templates/count.html
@@ -1,1 +1,10 @@
-<h1>Baam!! Count!</h1>
+<h1>Baam!! Your text is {{ count }} words!</h1>
+<a href="{% url 'home' %}">Start Again!</a>
+
+<h3> Your Text : {{ fulltext }}</h3>
+<br>
+<h1>Words Count!</h1>
+{% for word, counttotal in sortedwords %}
+{{ word }} : {{ counttotal}}
+<br>
+{% endfor %}
